--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <!--HEADER-->
 <header>
     <div class="header_wrapper">
-        <span>Услуги</span>
+        <p class="logo white">ADVANCE</p>
         <nav class="main_menu">
             <ul class="menu_ul">
-                <li class="fs20">Услуги</li>
                 <li class="fs20">
-                    <a href="#" class="dropbtn">Портфолио</a>
+                    <a href="#" class="dropbtn">Услуги</a>
                     <div id="dropdown_wrapper">
                         <div class="menu_category">
                             <ul>
@@ -42,6 +41,8 @@
                         </div>
                     </div>
                 </li>
+                <li class="fs20">Портфолио</li>
+                <li class="fs20">О нас</li>
                 <li class="fs20">Новости</li>
                 <li class="fs20">Контакты</li>
             </ul>
@@ -53,8 +54,23 @@
 </header>
 <!--TOP SECTION-->
 <section class="main_top_wrapper">
-    <p>ADVANCE</p>
-    <p>Разработка и производство рекламы</p>
+    <p class="logo very_big">ADVANCE</p>
+    <hr class="logo_underline">
+    <p class="big">Разработка и производство рекламы</p>
+</section>
+<!--SERVICE SECTION-->
+<section class="main_service_wrapper">
+    <div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </div>
+    <div>
+
+    </div>
 </section>
 <!--FOOTER-->
 <footer>
@@ -68,26 +84,27 @@
 
                 </div>
             </div>
-            <div>
-
+            <div class="footer_triangles">
+                <img src="src/img/footer/Triangle.svg">
+                <img src="src/img/footer/Triangle.svg">
             </div>
         </div>
         <div class="footer_top_right">
             <div class="footer_contacts">
                 <div class="f_contacts">
                     <span>
-                        LOC
+                        <img src="src/img/footer/address.svg" alt="address">
                     </span>
                     <div>
                         <p class="orange">Наш адрес</p>
                         <p>Украина, Харьков</p>
-                        <p>ул.Мироносицкаяб 88</p>
+                        <p>ул.Мироносицкая, 88</p>
                         <p>61023</p>
                     </div>
                 </div>
                 <div class="f_contacts">
                      <span>
-                        Tel
+                        <img src="src/img/footer/phones.svg" alt="phone">
                     </span>
                     <div>
                         <p class="orange">Телефон</p>
@@ -99,7 +116,7 @@
                 </div>
                 <div class="f_contacts">
                     <span>
-                       Gram
+                       <img src="src/img/footer/telega.svg" alt="telegram">
                     </span>
                     <div>
                         <p class="orange">Telegram</p>
@@ -120,7 +137,7 @@
     </div>
     <div class="footer_bottom">
         <div>
-            <p>ADVANCE</p>
+            <p class="logo big">ADVANCE</p>
         </div>
         <div class="footer_menu">
             <div>
@@ -147,8 +164,8 @@
                 <p class="r">в социальных сетях</p>
             </div>
             <div class="social_wrapper">
-                <span>I</span>
-                <span>F</span>
+                <span><img src="src/img/footer/insta.svg" alt="instagram icon"></span>
+                <span><img src="src/img/footer/facebook.svg" alt="facebook icon"></span>
             </div>
         </div>
     </div>
