--- a/index.html
+++ b/index.html
@@ -7,53 +7,53 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
-    <script defer src="src/script/m_active.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!--HEADER-->
 <header>
-    <div class="header_wrapper">
-        <p class="logo white">ADVANCE</p>
-        <nav class="main_menu">
-            <ul class="menu_ul">
-                <li class="fs20">
-                    <a href="#" class="dropbtn m_li">Услуги</a>
-                    <div class="dropdown_wrapper">
-                        <div class="menu_category">
-                            <ul>
-                                <li class="m_li menu_category_bnt1">Брендированная одежда</li>
-                                <li class="m_li menu_category_bnt2">Наружная реклама</li>
-                                <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
-                                <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
-                                <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
-                                <li class="m_li menu_category_bnt6">Полиграфия</li>
-                                <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
-                                <li class="m_li menu_category_bnt8">Освещение</li>
-                                <li class="m_li menu_category_bnt9">POS Материалы</li>
-                                <li class="m_li menu_category_bnt10">Выставочные стенды</li>
-                                <li class="m_li menu_category_bnt11">Эксклюзив</li>
-                                <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
-                            </ul>
-                        </div>
-                        <div class="menu_subcategory">
+        <div class="header_wrapper">
+            <p class="white"><a href="/" class="logo">ADVANCE</a></p>
+            <nav class="main_menu">
+                <ul class="menu_ul">
+                    <li class="fs20">
+                        <a href="#" class="dropbtn m_li">Услуги</a>
+                        <div class="dropdown_wrapper">
+                            <div class="menu_category">
+                                <ul>
+                                    <li class="m_li menu_category_bnt1">Брендированная одежда</li>
+                                    <li class="m_li menu_category_bnt2">Наружная реклама</li>
+                                    <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
+                                    <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
+                                    <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
+                                    <li class="m_li menu_category_bnt6">Полиграфия</li>
+                                    <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
+                                    <li class="m_li menu_category_bnt8">Освещение</li>
+                                    <li class="m_li menu_category_bnt9">POS Материалы</li>
+                                    <li class="m_li menu_category_bnt10">Выставочные стенды</li>
+                                    <li class="m_li menu_category_bnt11">Эксклюзив</li>
+                                    <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
+                                </ul>
+                            </div>
+                            <div class="menu_subcategory">
 
+                            </div>
+                            <div class="menu_category_img">
+                                <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                                <div class="menu_category_img_border"></div>
+                            </div>
                         </div>
-                        <div class="menu_category_img">
-                            <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                            <div class="menu_category_img_border"></div>
-                        </div>
-                    </div>
-                </li>
-                <li class="fs20 m_li">Портфолио</li>
-                <li class="fs20 m_li">О нас</li>
-                <li class="fs20 m_li">Новости</li>
-                <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
-            </ul>
-        </nav>
-        <div class="menu_tel">
-            <span class="orange">057 761 761 6</span>
+                    </li>
+                    <li class="fs20 m_li">Портфолио</li>
+                    <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
+                    <li class="fs20 m_li">Новости</li>
+                    <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="menu_tel">
+                <span class="orange">057 761 761 6</span>
+            </div>
         </div>
-    </div>
 </header>
 <!--TOP SECTION-->
 <section class="main_top_wrapper">
