--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ul>
             </nav>
             <div class="menu_tel">
-                <span class="orange">057 761 761 6</span>
+                <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
             </div>
         </div>
 </header>
@@ -276,9 +276,9 @@
                     <div>
                         <p class="orange">Телефон</p>
                         <p>Виктория Колесник:</p>
-                        <p>+38(096)761 761 6</p>
+                        <p><a href="tel://+380967617616">+38(096)761 761 6</a></p>
                         <p>Игорь Шорох</p>
-                        <p>+38(050)662 551 1</p>
+                        <p><a href="tel://+380506625511">+38(050)662 551 1</a></p>
                     </div>
                 </div>
                 <div class="f_contacts">
@@ -287,7 +287,7 @@
                     </span>
                     <div>
                         <p class="orange">Telegram</p>
-                        <p>+3(093)761 761 6</p>
+                        <p><a href="tel://+30937617616 ">+3(093)761 761 6</a></p>
                     </div>
                 </div>
             </div>
@@ -297,7 +297,7 @@
             </div>
             <div class="f_mail">
                 <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
-                <span class="orange">advanced.kh.ua@gmail.com</span>
+                <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
                 </p>
             </div>
         </div>
@@ -331,8 +331,8 @@
                 <p class="r">в социальных сетях</p>
             </div>
             <div class="social_wrapper">
-                <span><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></span>
-                <span><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></span>
+                <span><a href="#"><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></a></span>
+                <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
             </div>
         </div>
     </div>
