+category block fix2

--- a/category-page.html
+++ b/category-page.html
@@ -129,32 +129,34 @@
                 <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
             </div>
         </div>
-        <div class="xxx7">
-            <p class="bigger_center">Наши услуги</p>
-            <div class="service_wrapper">
-                <div class="menu_category">
-                    <ul>
-                        <li class="m_li menu_category_bnt1">Брендированная одежда</li>
-                        <li class="m_li menu_category_bnt2">Наружная реклама</li>
-                        <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
-                        <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
-                        <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
-                        <li class="m_li menu_category_bnt6">Полиграфия</li>
-                        <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
-                        <li class="m_li menu_category_bnt8">Освещение</li>
-                        <li class="m_li menu_category_bnt9">POS Материалы</li>
-                        <li class="m_li menu_category_bnt10">Выставочные стенды</li>
-                        <li class="m_li menu_category_bnt11">Эксклюзив</li>
-                        <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
-                    </ul>
-                </div>
-                <div class="menu_subcategory">
+        <div class="category_fix2">
+            <div class="xxx7">
+                <p class="bigger_center">Наши услуги</p>
+                <div class="service_wrapper">
+                    <div class="menu_category">
+                        <ul>
+                            <li class="m_li menu_category_bnt1">Брендированная одежда</li>
+                            <li class="m_li menu_category_bnt2">Наружная реклама</li>
+                            <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
+                            <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
+                            <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
+                            <li class="m_li menu_category_bnt6">Полиграфия</li>
+                            <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
+                            <li class="m_li menu_category_bnt8">Освещение</li>
+                            <li class="m_li menu_category_bnt9">POS Материалы</li>
+                            <li class="m_li menu_category_bnt10">Выставочные стенды</li>
+                            <li class="m_li menu_category_bnt11">Эксклюзив</li>
+                            <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
+                        </ul>
+                    </div>
+                    <div class="menu_subcategory">
 
-                </div>
-                <div class="menu_service_img">
-                    <div class="menu_services_stripes stripes"></div>
-                    <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                    <div class="menu_services_img_border"></div>
+                    </div>
+                    <div class="menu_service_img">
+                        <div class="menu_services_stripes stripes"></div>
+                        <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                        <div class="menu_services_img_border"></div>
+                    </div>
                 </div>
             </div>
         </div>
