--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </header>
 <!--TOP SECTION-->
 <section class="main_top_wrapper">
-    <p class="logo very_big">ADVANCE</p>
+    <p class="very_big">ADVANCE</p>
     <hr class="logo_underline">
     <p class="big">Разработка и производство рекламы</p>
 </section>
@@ -95,9 +95,7 @@
 
                 </div>
                 <div class="menu_service_img">
-                    <div class="menu_services_stripes stripes"></div>
                     <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                    <div class="menu_services_img_border"></div>
                 </div>
             </div>
         </div>
