--- a/subcategory-page.html
+++ b/subcategory-page.html
@@ -74,10 +74,10 @@
                     <p class="white">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. </p>
                 </div>
                 <div class="subcategory_img_container">
-                    <div><img data-lazy="src/img/subcategory/letters/1.jpg" src="/"></div>
-                    <div><img data-lazy="src/img/subcategory/letters/2.jpg" src="/"></div>
-                    <div><img data-lazy="src/img/subcategory/letters/3.jpg" src="/"></div>
-                    <div><img data-lazy="src/img/subcategory/letters/4.jpg" src="/"></div>
+                    <div><img data-lazy="src/img/subcategory/letters/1.jpg" src="/" alt="/"></div>
+                    <div><img data-lazy="src/img/subcategory/letters/2.jpg" src="/" alt="/"></div>
+                    <div><img data-lazy="src/img/subcategory/letters/3.jpg" src="/" alt="/"></div>
+                    <div><img data-lazy="src/img/subcategory/letters/4.jpg" src="/" alt="/"></div>
                 </div>
             </div>
         </div>
@@ -210,7 +210,6 @@
             </div>
             <div class="contact_map">
                 <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                <div class="stripes"></div>
             </div>
             <div class="f_mail">
                 <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
