--- a/contacts.html
+++ b/contacts.html
@@ -7,53 +7,205 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <header>
-        <div class="header_wrapper">
-            <p class="white"><a href="/" class="logo">ADVANCE</a></p>
-            <nav class="main_menu">
-                <ul class="menu_ul">
-                    <li class="fs20">
-                        <a href="#" class="dropbtn m_li">Услуги</a>
-                        <div class="dropdown_wrapper">
-                            <div class="menu_category">
-                                <ul>
-                                    <li class="m_li menu_category_bnt1">Брендированная одежда</li>
-                                    <li class="m_li menu_category_bnt2">Наружная реклама</li>
-                                    <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
-                                    <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
-                                    <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
-                                    <li class="m_li menu_category_bnt6">Полиграфия</li>
-                                    <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
-                                    <li class="m_li menu_category_bnt8">Освещение</li>
-                                    <li class="m_li menu_category_bnt9">POS Материалы</li>
-                                    <li class="m_li menu_category_bnt10">Выставочные стенды</li>
-                                    <li class="m_li menu_category_bnt11">Эксклюзив</li>
-                                    <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
-                                </ul>
-                            </div>
-                            <div class="menu_subcategory">
-
-                            </div>
-                            <div class="menu_category_img">
-                                <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                                <div class="menu_category_img_border"></div>
-                            </div>
+<!--HEADER-->
+<header>
+    <div class="header_wrapper">
+        <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
+        <nav class="main_menu">
+            <ul class="menu_ul">
+                <li class="fs20">
+                    <a href="#" class="dropbtn m_li">Услуги</a>
+                    <div class="dropdown_wrapper">
+                        <div class="menu_category">
+                            <ul>
+                                <li class="m_li menu_category_bnt1">Брендированная одежда</li>
+                                <li class="m_li menu_category_bnt2">Наружная реклама</li>
+                                <li class="m_li menu_category_bnt3">Широкоформатная печать</li>
+                                <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
+                                <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
+                                <li class="m_li menu_category_bnt6">Полиграфия</li>
+                                <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
+                                <li class="m_li menu_category_bnt8">Освещение</li>
+                                <li class="m_li menu_category_bnt9">POS Материалы</li>
+                                <li class="m_li menu_category_bnt10">Выставочные стенды</li>
+                                <li class="m_li menu_category_bnt11">Эксклюзив</li>
+                                <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
+                            </ul>
                         </div>
-                    </li>
-                    <li class="fs20 m_li">Портфолио</li>
-                    <li class="fs20 m_li">О нас</li>
-                    <li class="fs20 m_li">Новости</li>
-                    <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
-                </ul>
-            </nav>
-            <div class="menu_tel">
-                <span class="orange">057 761 761 6</span>
+                        <div class="menu_subcategory">
+
+                        </div>
+                        <div class="menu_category_img">
+                            <img class="change-image" data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                            <div class="menu_category_img_border"></div>
+                        </div>
+                    </div>
+                </li>
+                <li class="fs20 m_li">Портфолио</li>
+                <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
+                <li class="fs20 m_li">Новости</li>
+                <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="menu_tel">
+            <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
+        </div>
+    </div>
+</header>
+<div class="header_fix">
+</div>
+<section class="about_us contacts">
+    <div class="about_us_top">
+        <div class="about_us_left">
+            <p class="bigger">CONTACTS INFO </p>
+            <div class="xxx1">
+                <p class="bigger_center">О компании</p>
+                <p>Далеко-далеко за словесными горами в стране гласных<br>
+                    и согласных живут рыбные тексты. Вдали от всех живут<br>
+                    они в буквенных домах на берегу Семантика большого<br>
+                    языкового океана. Маленький ручеек Даль журчит по<br>
+                    всей стране и обеспечивает ее всеми необходимыми<br>
+                    правилами. Эта парадигматическая страна, в которой<br>
+                    жаренные члены предложения залетают прямо в рот.</p>
             </div>
         </div>
-    </header>
-    <div class="header_fix">
+        <div class="about_us_right">
+            <img data-lazy="src/img/about/ABOUT.webp" src="/" alt="Black Image" />
+        </div>
     </div>
-</body>
-</html>
+    <div class="about_us_bottom xxx4">
+
+    </div>
+</section>
+<!--FOOTER-->
+<footer>
+    <div class="footer_top">
+        <div class="footer_top_left">
+            <div class="footer_form_wrapper">
+                <div class="footer_form">
+                    <div class="form_container">
+                        <p class="bigger_center">Напишите нам</p>
+                        <p>Свяжитесь с нашими специалистами и получите консультацию по любому интересующему вас вопросу.
+                        </p>
+                    </div>
+                    <div class="form_container">
+                        <form>
+                            <div>
+                                <label for="f_theme">Тематика вашего обращения</label>
+                                <select id="f_theme">
+                                    <option value="value1">Значение 1</option>
+                                    <option value="value2" selected>Значение 2</option>
+                                    <option value="value3">Значение 3</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label for="f_name">Ваше имя</label><input id="f_name" type="text" >
+                            </div>
+                            <div>
+                                <label for="f_email">Электронная почта</label>
+                                <input type="email" id="f_email">
+                            </div>
+                            <div>
+                                <label for="f_message">Сообщение</label>
+                                <textarea id="f_message" rows="5" cols="33"></textarea>
+                            </div>
+                            <button type="submit"  class="adv_btn fs20 f_btn">Отправить</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="footer_form_border">
+
+                </div>
+            </div>
+            <div class="footer_triangles">
+                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            </div>
+        </div>
+        <div class="footer_top_right">
+            <div class="footer_triangles">
+                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            </div>
+            <div class="footer_contacts">
+                <div class="f_contacts">
+                    <span>
+                        <img data-lazy="src/img/footer/address.svg" src="/" alt="address">
+                    </span>
+                    <div>
+                        <p class="orange">Наш адрес</p>
+                        <p>Украина, Харьков</p>
+                        <p>ул.Мироносицкая, 88</p>
+                        <p>61023</p>
+                    </div>
+                </div>
+                <div class="f_contacts">
+                     <span>
+                        <img data-lazy="src/img/footer/phones.svg" src="/" alt="phone">
+                    </span>
+                    <div>
+                        <p class="orange">Телефон</p>
+                        <p>Виктория Колесник:</p>
+                        <p><a href="tel://+380967617616">+38(096)761 761 6</a></p>
+                        <p>Игорь Шорох</p>
+                        <p><a href="tel://+380506625511">+38(050)662 551 1</a></p>
+                    </div>
+                </div>
+                <div class="f_contacts">
+                    <span>
+                       <img data-lazy="src/img/footer/telega.svg" src="/" alt="telegram">
+                    </span>
+                    <div>
+                        <p class="orange">Telegram</p>
+                        <p><a href="tel://+30937617616 ">+3(093)761 761 6</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact_map">
+                <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+                <div class="stripes"></div>
+            </div>
+            <div class="f_mail">
+                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
+                    <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="footer_bottom">
+        <div>
+            <p class="logo big">ADVANCE</p>
+        </div>
+        <div class="footer_menu">
+            <div>
+                <div class="footer_nav">
+                    <nav class="main_menu">
+                        <ul class="menu_ul">
+                            <li class="fs20 active">Услуги</li>
+                            <li class="fs20">Портфолио</li>
+                            <li class="fs20">Новости</li>
+                            <li class="fs20">Контакты</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div>
+                <div class="footer_copyright">
+                    <p class="r">Copyright &copy; 2019 ADVANCE. All rights reserved</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer_social">
+            <div>
+                <p class="r">Подписывайся на нас</p>
+                <p class="r">в социальных сетях</p>
+            </div>
+            <div class="social_wrapper">
+                <span><a href="#"><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></a></span>
+                <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
+            </div>
+        </div>
+    </div>
+</footer>
