--- a/contacts.html
+++ b/contacts.html
@@ -59,25 +59,24 @@
 </div>
 <section class="about_us contacts">
     <div class="about_us_top">
-        <div class="about_us_left">
-            <p class="bigger">CONTACTS INFO </p>
-            <div class="xxx1">
+        <p class="bigger">ADVANCE - a3a3a ololo</p>
+    </div>
+    <div class="xxx1">
+        <div class="about_us_center">
+            <div class="about_us_left">
                 <p class="bigger_center">О компании</p>
-                <p>Далеко-далеко за словесными горами в стране гласных<br>
-                    и согласных живут рыбные тексты. Вдали от всех живут<br>
-                    они в буквенных домах на берегу Семантика большого<br>
-                    языкового океана. Маленький ручеек Даль журчит по<br>
-                    всей стране и обеспечивает ее всеми необходимыми<br>
-                    правилами. Эта парадигматическая страна, в которой<br>
+                <p>Далеко-далеко за словесными горами в стране гласных
+                    и согласных живут рыбные тексты. Вдали от всех живут
+                    они в буквенных домах на берегу Семантика большого
+                    языкового океана. Маленький ручеек Даль журчит по
+                    всей стране и обеспечивает ее всеми необходимыми
+                    правилами. Эта парадигматическая страна, в которой
                     жаренные члены предложения залетают прямо в рот.</p>
             </div>
+            <div class="about_us_right">
+                <img data-lazy="src/img/about/ABOUT.webp" src="/" alt="Black Image" />
+            </div>
         </div>
-        <div class="about_us_right">
-            <img data-lazy="src/img/about/ABOUT.webp" src="/" alt="Black Image" />
-        </div>
-    </div>
-    <div class="about_us_bottom xxx4">
-
     </div>
 </section>
 <!--FOOTER-->
