+news page +need fix

--- a/about-us.html
+++ b/about-us.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<!--HEADER-->
 <header>
     <div class="header_wrapper">
         <p class="white"><a href="/" class="logo big">ADVANCE</a></p>
@@ -45,15 +46,16 @@
                 </li>
                 <li class="fs20 m_li">Портфолио</li>
                 <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
-                <li class="fs20 m_li">Новости</li>
+                <li class="fs20 m_li"><a href="news.html" class="m_li">Новости</a></li>
                 <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
             </ul>
         </nav>
         <div class="menu_tel">
-            <span class="orange">057 761 761 6</span>
+            <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
         </div>
     </div>
 </header>
+<!--HEADER END-->
 <div class="header_fix">
 </div>
 <section class="about_us">
