--- a/news.html
+++ b/news.html
@@ -58,42 +58,67 @@
 <!--HEADER END-->
 <div class="header_fix">
 </div>
-<section class="blog_wrapper">
+<section class="news_wrapper">
     <div class="category_container subcategory_fix blog">
-        <div class="blog_top_container">
-            <div>
-                <p class="fs36_r">Blog</p>
-            </div>
-            <div class="triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            </div>
+    <div class="blog_top_container">
+        <div>
+            <p class="fs36_r white">Свежие новости</p>
         </div>
-        <div class="xxx1">
-            <div class="slogan_wrapper">
-                <div class="category_slogan">
-                    <p class="white big">Title</p>
-                </div>
-                <div class="blog_top_img_container">
-                    <img data-lazy="src/img/blog/blog.png" src="/" alt="blog">
-                </div>
-                <div class="blog_title">
-                    <p class="fs20_r black">Title Lorem ipsum dolor sit ame t, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-                    <span class="black">14 January 88</span>
-                </div>
-            </div>
+        <div class="triangles">
+            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
         </div>
     </div>
-</section>
-<section class="post_container xxx9">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus ultricies tristique nulla aliquet enim tortor at. Natoque penatibus et magnis dis parturient montes nascetur ridiculus. Tortor vitae purus faucibus ornare suspendisse sed. Etiam sit amet nisl purus. Condimentum lacinia quis vel eros donec ac odio. Enim tortor at auctor urna nunc id. In metus vulputate eu scelerisque. Et ligula ullamcorper malesuada proin libero nunc. Quis varius quam quisque id. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Eget gravida cum sociis natoque penatibus. Purus sit amet volutpat consequat. Est ultricies integer quis auctor elit. Vitae justo eget magna fermentum iaculis. Mauris nunc congue nisi vitae suscipit tellus mauris. Neque vitae tempus quam pellentesque nec. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Vulputate eu scelerisque felis imperdiet proin fermentum leo vel.
-    </p>
-    <p class="fs20_r">Хз зачем тут это</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus ultricies tristique nulla aliquet enim tortor at. Natoque penatibus et magnis dis parturient montes nascetur ridiculus. Tortor vitae purus faucibus ornare suspendisse sed. Etiam sit amet nisl purus. Condimentum lacinia quis vel eros donec ac odio. Enim tortor at auctor urna nunc id. In metus vulputate eu scelerisque. Et ligula ullamcorper malesuada proin libero nunc. Quis varius quam quisque id. Malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Eget gravida cum sociis natoque penatibus. Purus sit amet volutpat consequat. Est ultricies integer quis auctor elit. Vitae justo eget magna fermentum iaculis. Mauris nunc congue nisi vitae suscipit tellus mauris. Neque vitae tempus quam pellentesque nec. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Vulputate eu scelerisque felis imperdiet proin fermentum leo vel.
-    <p class="black big">Другие новости</p>
+    <div class="xxx1">
+        <div class="last_news">
+            <div class="last_container">
+                <div>
+                    <p class="fs36_r">Title Lorem ipsum </p>
+                    <span>14 August 88</span>
+                </div>
+                <div class="news_preview">
+                    <p class="fs20_r">Subtitle</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+                </div>
+                <a href="#" class="post_link">Читать дальше</a>
+            </div>
+            <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+        </div>
+        <div class="last_news_bottom">
+            <span class="fs36_r">Все новости</span>
+        </div>
+    </div>
+    </div>
 </section>
 <section class="other_posts">
     <div class="more_posts">
+        <div class="post_wrapper">
+            <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+            <div class="post_heading">
+                <p class="fs20_r">Title Lorem ipsum dolor sit ame</p>
+                <span>14 August 88</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+            <a href="#" class="post_link">Читать дальше</a>
+        </div>
+        <div class="post_wrapper">
+            <img data-lazy="src/img/blog/2.png" src="/" alt="decoration">
+            <div class="post_heading">
+                <p class="fs20_r">Title Lorem ipsum dolor sit ame</p>
+                <span>14 August 88</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+            <a href="#" class="post_link">Читать дальше</a>
+        </div>
+        <div class="post_wrapper">
+            <img data-lazy="src/img/blog/3.png" src="/" alt="decoration">
+            <div class="post_heading">
+                <p class="fs20_r">Title Lorem ipsum dolor sit ame</p>
+                <span>14 August 88</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+            <a href="#" class="post_link">Читать дальше</a>
+        </div>
         <div class="post_wrapper">
             <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
             <div class="post_heading">
@@ -142,14 +167,14 @@
             <a href="#" class="post_link">Читать дальше</a>
         </div>
         <div class="post_wrapper">
-        <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
-        <div class="post_heading">
-            <p class="fs20_r">Title Lorem ipsum dolor sit ame</p>
-            <span>14 August 88</span>
+            <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+            <div class="post_heading">
+                <p class="fs20_r">Title Lorem ipsum dolor sit ame</p>
+                <span>14 August 88</span>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+            <a href="#" class="post_link">Читать дальше</a>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
-        <a href="#" class="post_link">Читать дальше</a>
-    </div>
     </div>
     <div class="main_why_we xxx2_2 s_m">
         <div>
@@ -157,7 +182,7 @@
         </div>
     </div>
 </section>
-<!--FOOTER-->
+
 <footer>
     <div class="footer_top">
         <div class="footer_top_left">
@@ -242,7 +267,6 @@
             </div>
             <div class="contact_map">
                 <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                <div class="stripes"></div>
             </div>
             <div class="f_mail">
                 <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
@@ -286,4 +310,3 @@
         </div>
     </div>
 </footer>
-
