--- a/subcategory-page.html
+++ b/subcategory-page.html
@@ -46,7 +46,7 @@
                 </li>
                 <li class="fs20 m_li">Портфолио</li>
                 <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
-                <li class="fs20 m_li">Новости</li>
+                <li class="fs20 m_li"><a href="news.html" class="m_li">Новости</a></li>
                 <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
             </ul>
         </nav>
@@ -55,6 +55,7 @@
         </div>
     </div>
 </header>
+<!--HEADER END-->
 <div class="header_fix">
 </div>
 <section class="category_wrapper">
