--- a/news.html
+++ b/news.html
@@ -82,7 +82,7 @@
                 </div>
                 <a href="#" class="post_link">Читать дальше</a>
             </div>
-            <img data-lazy="src/img/blog/1.png" src="/" alt="decoration">
+            <img data-lazy="src/img/blog/blog1.png" src="/" alt="decoration">
         </div>
         <div class="last_news_bottom">
             <span class="fs36_r">Все новости</span>
